test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_super_as_suffix.sol
contract C {
    uint a = 1000 super;
}
// ----
// TypeError 6469: (26-36): Type cannot be used as a literal suffix.
